Implement generation algorithm